<resources>
    <string name="app_name">Paalan</string>
    <string name="prompt_email">Mobile No / Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">Password can not be empty</string>
    <string name="error_invalid_password">This password can not be less than 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_timeout">Time out, please try again</string>
    <string name="error_went_wrong">Something went wrong</string>
    <string name="error_org_profile">Some issues while fetching orgnazation profile for you, Kindly check after some time!!!</string>
    <string name="error_server">Server not responding</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logggedIn">You loggedIn successfully</string>
    <string name="action_signup_button">SIGNUP</string>
    <string name="dash_borad">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dashborad_fragment">DashBorad Fragment</string>
    <string name="follow_us_on_facebook">Follow Us on Facebook</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_ngo_name">Enter NGO Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="e_mail">e-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="covernment_registration_number">Covernment Registration Number</string>
    <string name="individual_registration">Individual REGISTRATION</string>
    <string name="ngo_registration">NGO Registration</string>
    <string name="join_ngo">JOIN NGO + </string>
    <string name="testing">Testing</string>
    <string name="register">Register</string>
    <string name="register_ord">Register your organization</string>
    <string name="test_service">Test Service</string>
    <string name="login_as_organization">Login as Organization</string>
    <string name="login_as_Individual">Login as Individual</string>
    <string name="ind">IND</string>
    <string name="org">ORG</string>
    <string name="enter_user_or_password">Enter USer OR Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="login_as_org">Login as ORG</string>
    <string name="ngo_achievments">NGO Achievments</string>
    <string name="syncdata">SyncData</string>
    <string name="deletedata">DeleteData</string>
    <string name="postal_address">postal_address</string>
    <string name="country">Country</string>
    <string name="ind_login">Individual</string>
    <string name="org_login">Organisation</string>
    <string name="do_not_have_an_account_signup">Do not have an account?SignUp</string>
    <string name="login_as">Login as</string>
    <string name="error_message">Error Message</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="login">Login</string>
    <string name="signIn">SignIn</string>
    <string name="signUp">Sign Up</string>
    <string name="toolbar_title">Title</string>
    <string name="name">Name</string>
    <string name="role_in_organization">Role in Organization</string>
    <string name="organization_id">Organization Id</string>
    <string name="registration_no">Registration No</string>
    <string name="registration">Register</string>
    <string name="profile_up_to_date">Profile up-to-daterequest</string>
    <string name="achievement_created">Achievement Created Successfully</string>
    <string name="event_created">Event Created Successfully</string>
    <string name="request_created">Social Request Created Successfully</string>
    <string name="achievement_updated">Achievement Updated Successfully</string>
    <string name="event_updated">Event Updated Successfully</string>
    <string name="request_updated">Social Request Updated Successfully</string>
    <string name="achievement_deleted">Achievement Deleted Successfully</string>
    <string name="event_deleted">Event Deleted Successfully</string>
    <string name="request_deleted">Social Request Deleted Successfully</string>
    <string name="submit">Submit</string>
    <string name="event_creator_name">Event Organizer Name</string>
    <string name="achiver_name">Achiever Name</string>
    <string name="requester_name">Requester Name</string>
    <string name="organized_by">ORGANIZED BY</string>
    <string name="achiver">ACHIEVER</string>
    <string name="requested_by">REQUESTED BY</string>
    <string name="title">Title</string>
    <string name="subtitle">Sub Title</string>
    <string name="descrition">Description</string>
    <string name="others">Others</string>
    <string name="remarks">Remarks</string>
    <string name="location">Location</string>
    <string name="achievement_images">Add Achievements</string>
    <string name="error_empty_name">Name can not be empty</string>
    <string name="error_empty_title">Title can not be empty</string>
    <string name="error_empty_sub_title">Sub title can not be empty</string>
    <string name="error_empty_description">Description can not be empty</string>
    <string name="error_empty_others">Others can not be empty</string>
    <string name="error_empty_location">Location can not be empty</string>
    <string name="error_empty_startdate">Start daterequest can not be empty</string>
    <string name="error_empty_enddate">End daterequest can not be empty</string>
    <string name="error_empty_role">Role can not be empty</string>
    <string name="error_empty_regNo">Registration no can not be empty</string>
    <string name="error_empty_presence">Presence area can not be empty</string>
    <string name="error_internet">Enable your internet connection</string>
    <string name="error_location">Failed to fetch location,please turn on wifi also</string>
    <string name="error_startdate">Please select start date first</string>
    <string name="error_enddate">End date must be greater than start date</string>
    <string name="error_gps_location">Could not get your location.</string>
    <string-array name="drawer_array">
        <item>My Profile</item>
        <item>Achievements</item>
        <item>Publish Event</item>
        <item>Social Request</item>
        <item>About Us</item>
        <item>Connect with Paalan</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="ind_drawer_array">
        <item>Events</item>
        <item>Social Request</item>
        <item>Groups</item>
        <item>Achievements</item>
        <item>Donate</item>
        <item>Date with Paalan</item>
        <item>Login with Paalan</item>
        <item>About Us</item>
        <item>Connect with Paalan</item>
    </string-array>
    <string name="my_profile">My Profile</string>
    <string name="Achievement">Achievements</string>
    <string name="publish_event">Publish Event</string>
    <string name="request">Social Request</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="connect_us">Connect with Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="events">Events</string>
    <string name="group">Groups</string>
    <string name="achievements">Achievements</string>
    <string name="donate">Donate</string>
    <string name="date_paalan">Date with Paalan</string>
    <string name="login_paalan">Login with Paalan</string>
    <string name="connect_paalan">Connect with Paalan</string>
    <string name="donate_paalan">Donate with Paalan</string>
    <string name="registers">Register</string>
    <string name="create_achivement">Create Achiement</string>
    <string name="view_achivement">Achievements</string>
    <string name="create_event">Create Event</string>
    <string name="view_event">Events</string>
    <string name="create_request">Create Social Request</string>
    <string name="view_request">Social Requests</string>
    <string-array name="dashboard_content_array">
        <item>Publish Event</item>
        <item>Achievements</item>
        <item>Social Request</item>
        <item>About Us</item>
        <item>Connect with Us</item>
    </string-array>
    <string-array name="dashboard_descrition_array">
        <item>Testing for Publish Event</item>
        <item>Testing for Achievements</item>
        <item>Testing for Social Request</item>
        <item>Testing for About Us</item>
        <item>Testing for Connect with Us</item>
    </string-array>
    <string-array name="achievements_array">
        <item>Create Achievement</item>
        <item>Achievement</item>
    </string-array>
    <string-array name="events_array">
        <item>Create Events</item>
        <item>Events</item>
    </string-array>
    <string-array name="request_array">
        <item>Create Social Request</item>
        <item>Social Request</item>
    </string-array>
    <string-array name="login_array">
        <item>Login</item>
        <item>Registration</item>
    </string-array>
    <string-array name="event_category">
        <item>Medical Camps</item>
        <item>Social Awareness</item>
        <item>Child care</item>
        <item>Health and Fitness</item>
        <item>Food distribution</item>
        <item>Charity</item>
        <item>Misc</item>
    </string-array>
    <string name="acheivements">Achievement</string>
    <string name="acheivement_details">Achievement Details</string>
    <string name="update_acheivement">Update Achievement</string>
    <string name="delete_acheivement">Delete Achievement</string>
    <string name="update_delete_acheivement">Manage Achievement</string>
    <string name="event_details">Event Details</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="update_delete_event">Manage Event</string>
    <string name="event_id">Event Id</string>
    <string name="oraginization_id">Oraginization Id</string>
    <string name="discription">Discription</string>
    <string name="startdate">Start Date</string>
    <string name="category">Category</string>
    <string name="other">Other</string>
    <string name="enddate">enddate</string>
    <string name="EndDate">End Date</string>
    <string name="Oraginization_id">Organization Id</string>
    <string name="Organization_profile">Organizer Profile</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="test">Test</string>
    <string name="Update">Update</string>
    <string name="Create">Create</string>
    <string name="View">View</string>
    <string name="view_name">NAME</string>
    <string name="view_mobile">MOBILE NO</string>
    <string name="view_email">EMAIL</string>
    <string name="view_address">ADDRESS</string>
    <string name="view_role">ROLE</string>
    <string name="view_news">NEWS LETTER</string>
    <string name="view_authorised">GOVT AUTHORISED</string>
    <string name="view_reg_no">REGISTRATION NO</string>
    <string name="view_facebook">FACEBOOK LINK</string>
    <string name="view_linkedin">LINKEDIN LINK</string>
    <string name="groups">Social Groups</string>
    <string name="enter_name">Enter name</string>
    <string name="donor_info">Donor Information</string>
</resources>