<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/events"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"/>

    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groups"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/groups"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"/>


    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/twitter"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"/>

    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndAchievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Achievement"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/twitter"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"/>


    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_paalan"
        android:drawableLeft="@drawable/connectwithpaalan"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/primary_text"/>



    <LinearLayout
        android:id="@+id/llIndConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:visibility="gone">

        <com.phyder.paalan.utils.TextViewOpenSansRegular
            android:id="@+id/txtIndLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primary_text"
            android:drawableLeft="@drawable/twitter"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"  />


        <com.phyder.paalan.utils.TextViewOpenSansRegular
            android:id="@+id/txtIndRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registers"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/twitter"
            android:gravity="center_vertical"
            android:textColor="@color/primary_text"/>

    </LinearLayout>

    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndDonatePaalan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_paalan"
        android:drawableLeft="@drawable/twitter"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:id="@+id/llIndDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:visibility="gone">

        <com.phyder.paalan.utils.TextViewOpenSansRegular
            android:id="@+id/txtIndDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate"
            android:textColor="@color/primary_text"
            android:drawableLeft="@drawable/twitter"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"  />


        <com.phyder.paalan.utils.TextViewOpenSansRegular
            android:id="@+id/txtIndDatePaalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_paalan"
            android:drawableLeft="@drawable/twitter"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/primary_text"/>

    </LinearLayout>


    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/twitter"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"/>

    <com.phyder.paalan.utils.TextViewOpenSansRegular
        android:id="@+id/txtIndContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_us"
        android:drawableLeft="@drawable/twitter"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/primary_text"/>

</LinearLayout>

    </ScrollView>